--- a/libs/change/src/lib/change/change.component.html
+++ b/libs/change/src/lib/change/change.component.html
@@ -1,4 +1,4 @@
-<!-- implements F011 -->
+<!-- implements F013 -->
 <ng-container *ngIf="vm$ | async as vm">
   <div *ngIf="!vm.isPasswordChanged; else passwordChanged">
     <party-time-main-header title="Passwort ändern" />
@@ -8,29 +8,18 @@
           <section>
             <party-time-primary-label label="Aktuelles Passwort" />
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
-            >
-              <input
-                type="password"
-                name="current-password"
-                id="current-password"
-                autocomplete="current-password"
-                required
-                formControlName="oldPassword"
-                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-              />
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
+              <input type="password" name="current-password" id="current-password" autocomplete="current-password"
+                required formControlName="oldPassword"
+                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
             </div>
 
-            <div
-              *ngIf="
+            <div *ngIf="
                 f['oldPassword'].errors &&
                 (f['oldPassword'].dirty || f['oldPassword'].touched)
-              "
-            >
+              ">
               <div *ngIf="f['oldPassword'].errors['required']">
-                <party-time-primary-error
-                  error="Bitte gib dein aktuelles Passwort ein."
-                />
+                <party-time-primary-error error="Bitte gib dein aktuelles Passwort ein." />
               </div>
             </div>
           </section>
@@ -38,61 +27,38 @@
           <section>
             <party-time-primary-label label="Neues Passwort" />
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
-            >
-              <input
-                type="password"
-                name="new-password"
-                id="new-password"
-                autocomplete="new-password"
-                required
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
+              <input type="password" name="new-password" id="new-password" autocomplete="new-password" required
                 formControlName="newPassword"
-                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-              />
+                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
             </div>
-            <div
-              *ngIf="
+            <div *ngIf="
                 f['newPassword'].errors &&
                 (f['newPassword'].dirty || f['newPassword'].touched)
-              "
-            >
+              ">
               <div *ngIf="f['newPassword'].errors['required']">
                 <party-time-primary-error error="Bitte gib ein Passwort ein." />
               </div>
               <div *ngIf="f['newPassword'].errors['minlength']">
-                <party-time-primary-error
-                  error="Das Passwort muss mindestens 8 Zeichen lang sein."
-                />
+                <party-time-primary-error error="Das Passwort muss mindestens 8 Zeichen lang sein." />
               </div>
               <div *ngIf="f['newPassword'].errors['maxlength']">
-                <party-time-primary-error
-                  error="Das Passwort darf maximal 30 Zeichen lang sein."
-                />
+                <party-time-primary-error error="Das Passwort darf maximal 30 Zeichen lang sein." />
               </div>
               <div *ngIf="f['newPassword'].errors['pattern']">
                 <party-time-primary-error
-                  error='Das Passwort muss mindestens 1 Großbuchstaben enthalten. Das Passwort muss mindestens 1 Kleinbuchstaben enthalten. Das Passwort muss mindestens 1 Zahl enthalten. Das Passwort muss mindestens 1 Sonderzeichen (,!"§$%&/()=?[]\&#x007B;} und Leerzeichen) enthalten.'
-                />
+                  error='Das Passwort muss mindestens 1 Großbuchstaben enthalten. Das Passwort muss mindestens 1 Kleinbuchstaben enthalten. Das Passwort muss mindestens 1 Zahl enthalten. Das Passwort muss mindestens 1 Sonderzeichen (,!"§$%&/()=?[]\&#x007B;} und Leerzeichen) enthalten.' />
               </div>
             </div>
           </section>
 
           <div class="flex w-full place-content-end pt-7">
-            <div
-              class="inline-block w-full justify-center pt-2 text-left align-bottom"
-            >
+            <div class="inline-block w-full justify-center pt-2 text-left align-bottom">
               <party-time-primary-error [error]="vm.error?.error?.message" />
             </div>
 
-            <party-time-primary-button
-              lodingMessage="Ändere"
-              [isLoading]="vm.isLoading"
-              id="change"
-              (clicked)="onSubmit()"
-              [disabled]="!changeForm.valid || vm.isLoading"
-              type="button"
-              name="Ändern"
-            />
+            <party-time-primary-button lodingMessage="Ändere" [isLoading]="vm.isLoading" id="change"
+              (clicked)="onSubmit()" [disabled]="!changeForm.valid || vm.isLoading" type="button" name="Ändern" />
           </div>
         </div>
       </div>
@@ -100,12 +66,9 @@
   </div>
   <ng-template #passwordChanged>
     <div class="grid h-screen place-items-center">
-      <div
-        class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
-      >
+      <div class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
         <p
-          class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark"
-        >
+          class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark">
           Hey!
         </p>
         <p>Dein Passwort wurde geändert.</p>
